[gd_scene load_steps=6 format=3 uid="uid://wevdjfcvru2r"]

[ext_resource type="Script" path="res://scripts/door.gd" id="1_7uwvd"]
[ext_resource type="Texture2D" uid="uid://dlo66a8w3ti6t" path="res://assets/door.png" id="2_1lvdl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2n0sk"]
radius = 4.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qiue2"]
size = Vector2(32, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svima"]
size = Vector2(38, 57)

[node name="Door" type="StaticBody2D"]
disable_mode = 1
collision_layer = 130
collision_mask = 5
script = ExtResource("1_7uwvd")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(0, -32)
texture = ExtResource("2_1lvdl")
hframes = 2

[node name="IndicatorCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -50)
shape = SubResource("CapsuleShape2D_2n0sk")

[node name="DoorCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_qiue2")

[node name="CloseTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="SafeArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeArea"]
position = Vector2(0, -28.5)
shape = SubResource("RectangleShape2D_svima")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="timeout" from="CloseTimer" to="." method="_on_close_timer_timeout"]
[connection signal="body_entered" from="SafeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="body_exited" from="SafeArea" to="." method="_on_safe_area_body_exited"]
